--- a/views/add_article.pug
+++ b/views/add_article.pug
@@ -15,4 +15,4 @@ block content
             label Body:
             textarea.form-control(name='body')
                 
-        input.btn.btn-primary('submit',value='submit')
+        input.btn.btn-primary(type='submit',value='Submit')
