--- a/views/index.pug
+++ b/views/index.pug
@@ -2,9 +2,8 @@ extends layout
 
 block content
     h1 #{title}
-    ul
+    ul.list-group
         each article, i in articles
-            br
-            li= article.title
+            li.list-group-item= article.title
             
             
