--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,9 +2,34 @@ doctype html
 html
     head
         title Knowledge Base
+        link(rel='stylesheet' href='bower_components/bootstrap/dist/css/bootstrap.css')
     body
-        block content
-        br
-        hr
-        footer
+        .container
+         block content
+         br
+         hr
+         footer
             p All Right Reserved &copy; 2018 Aktar Zaman
+                    
+                    
+                    
+                    
+                    //- nav.navbar.navbar-inverse.navbar-fixed-top
+                    //-     .container
+                    //-         .navbar-header
+                    //-             button.navbar-toggle.collapsed(type='button',data-toggle='collapse',)
+                    //-                 span.sr-only Toggle navigation
+                    //-                 span.icon-bar
+                    //-                 span.icon-bar
+                    //-                 span.icon-bar
+                    //-             a.navbar-brand(href='a') project name
+                    //-         #navbar.collapse.navbar-collapse
+                    //-             ul.nav.navbar-nav
+                    //-                 li.active
+                    //-                     a(href='#') Home
+                    //- 
+                    //-                 li
+                    //-                     a(href='#about') About
+                    //- 
+                    //-                 li
+                    //-                     a(href='#contact') Contact
