--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
     head
         title Knowledge Base
-        link(rel='stylesheet' href='bower_components/bootstrap/dist/css/bootstrap.css')
+        link(rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css')
     body
         .container
          block content
@@ -17,7 +17,7 @@ html
                     //- nav.navbar.navbar-inverse.navbar-fixed-top
                     //-     .container
                     //-         .navbar-header
-                    //-             button.navbar-toggle.collapsed(type='button',data-toggle='collapse',)
+                    //-             button.navbar-toggle.collapsed(type='button',data-toggle='collapse', data-target='')
                     //-                 span.sr-only Toggle navigation
                     //-                 span.icon-bar
                     //-                 span.icon-bar
