--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,22 +14,22 @@ html
                     
                     
                     
-                    //- nav.navbar.navbar-inverse.navbar-fixed-top
-                    //-     .container
-                    //-         .navbar-header
-                    //-             button.navbar-toggle.collapsed(type='button',data-toggle='collapse', data-target='')
-                    //-                 span.sr-only Toggle navigation
-                    //-                 span.icon-bar
-                    //-                 span.icon-bar
-                    //-                 span.icon-bar
-                    //-             a.navbar-brand(href='a') project name
-                    //-         #navbar.collapse.navbar-collapse
-                    //-             ul.nav.navbar-nav
-                    //-                 li.active
-                    //-                     a(href='#') Home
-                    //- 
-                    //-                 li
-                    //-                     a(href='#about') About
-                    //- 
-                    //-                 li
-                    //-                     a(href='#contact') Contact
+              nav.navbar.navbar-inverse.navbar-fixed-top
+                  .container
+                      .navbar-header
+                          button.navbar-toggle.collapsed(type='button',data-toggle='collapse', data-target='')
+                              span.sr-only Toggle navigation
+                              span.icon-bar
+                              span.icon-bar
+                              span.icon-bar
+                          a.navbar-brand(href='a') project name
+                      #navbar.collapse.navbar-collapse
+                          ul.nav.navbar-nav
+                              li.active
+                                  a(href='#') Home
+              
+                              li
+                                  a(href='#about') About
+              
+                              li
+                                  a(href='#contact') Contact
