--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,33 +3,31 @@ html
     head
         title Knowledge Base
         link(rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css')
+        link(rel='stylesheet' href='/css/style.css')
     body
+        nav.navbar.navbar-inverse
+        .container
+            .navbar-header
+                    button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
+                    span.sr-only Toggle Navigation
+                        span.icon-bar
+                        span.icon-bar
+                        span.icon-bar
+                    a.navbar-brand(href='/') Knowledge Base
+                    //- #navbar.collapse.navbar-collapse
+                    ul.nav.navbar-nav
+                        li
+                            a(href='/') Home
+                        li
+                            a(href='/articles/add') Add Article
         .container
          block content
          br
          hr
          footer
             p All Right Reserved &copy; 2018 Aktar Zaman
-                    
-                    
-                    
-                    
-              nav.navbar.navbar-inverse.navbar-fixed-top
-                  .container
-                      .navbar-header
-                          button.navbar-toggle.collapsed(type='button',data-toggle='collapse', data-target='')
-                              span.sr-only Toggle navigation
-                              span.icon-bar
-                              span.icon-bar
-                              span.icon-bar
-                          a.navbar-brand(href='a') project name
-                      #navbar.collapse.navbar-collapse
-                          ul.nav.navbar-nav
-                              li.active
-                                  a(href='#') Home
-              
-                              li
-                                  a(href='#about') About
-              
-                              li
-                                  a(href='#contact') Contact
+         script(src='/js/main.js')
+         script(src='/bower_components/jquery/dist/jquery.js')
+         script(src='/bower_components/bootstrap/dist/js/bootstrap.js')
+         
+         
