--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,7 @@ html
                         span.icon-bar
                         span.icon-bar
                     a.navbar-brand(href='/') Knowledge Base
-                    //- #navbar.collapse.navbar-collapse
+                    #navbar.collapse.navbar-collapse
                     ul.nav.navbar-nav
                         li
                             a(href='/') Home
