don't know what I am doing

--- a/views/edit_article.pug
+++ b/views/edit_article.pug
@@ -4,15 +4,15 @@ block content
     h1 #{title}
     form(method='POST', action='/articles/edit/'+article._id)
         #form-group
-            label Title:
+            label Charity Name:
             input.form-control(name='title', type='text', value = article.title)
                 
         #form-group
-            label Author:
+            label Organizer:
             input.form-control(name='author', type='text', value = article.author)
                 
         #form-group
-            label Body:
+            label Donation Amount:
             textarea.form-control(name='body')= article.body
         br
         input.btn.btn-primary(type='submit',value='Submit')
