--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        title Knowledge Base
+        title Charity Tracker
         link(rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css')
         link(rel='stylesheet' href='/css/style.css')
     body
@@ -13,7 +13,7 @@ html
                         span.icon-bar
                         span.icon-bar
                         span.icon-bar
-                    a.navbar-brand(href='/') Knowledge Base
+                    a.navbar-brand(href='/') Charity Tracker
                     #navbar.collapse.navbar-collapse
                     ul.nav.navbar-nav
                         li
@@ -25,7 +25,7 @@ html
          br
          hr
          footer
-            p All Right Reserved &copy; 2018 Aktar Zaman
+         p All Right Reserved &copy; 2018 Aktar Zaman
          script(src='/bower_components/jquery/dist/jquery.js')
          script(src='/bower_components/bootstrap/dist/js/bootstrap.js')
          script(src='/js/main.js')
